--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node dist/server.js",
     "dev": "nodemon --watch src/**/*.ts --exec ts-node src/server.ts",
     "build": "tsc",
-    "create-demo-user": "ts-node scripts/createDemoUser.ts"
+    "create-demo-user": "ts-node scripts/createDemoUser.ts",
+    "add-audit-permissions": "ts-node scripts/addAuditPermissions.ts"
   },
   "keywords": [],
   "author": "",
