--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 DB_CONNECTION=mongodb+srv://dcuser:DC123@cluster0.y8k43x.mongodb.net/demo_app?retryWrites=true&w=majority 
+# DB_CONNECTION=mongodb+srv://dcuser:DC123@ibcluster.gaj1b5w.mongodb.net/demo_app?retryWrites=true&w=majority 
+AWS_ACCESS_KEY_ID=AKIA2JFWAGJGW2A3OCVX
+AWS_SECRET_ACCESS_KEY=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
+AWS_REGION=eu-north-1
+AWS_S3_BUCKET_NAME=euride
